# fishy-game-server-database

./: .gitignore  Dockerfile  README.md  UPGRADES.md  flake.nix  test-docker.sh
backend/: Cargo.toml  database-init.sql
backend/entity/: fish_caught.rs  fish_caught_bait.rs  friend_requests.rs  inventory_item.rs  mail.rs  prelude.rs  stats.rs
backend/src/: docs.rs  domain.rs  main.rs
backend/src/controller/: authentication.rs  competitions.rs  data.rs  effects.rs  fishmarket.rs  friends.rs  inventory.rs  mail.rs  mod.rs  shop.rs  stats.rs  user.rs
backend/src/entity/: competition_results.rs  competitions.rs  fish_caught_area.rs  friends.rs  mailbox.rs  mod.rs  player_effects.rs  prelude.rs  users.rs
backend/src/repository/: competitions.rs  data.rs  effects.rs  friends.rs  inventory.rs  mail.rs  mod.rs  stats.rs  user.rs
backend/src/service/: authentication.rs  competitions.rs  data.rs  effects.rs  fishmarket.rs  friends.rs  inventory.rs  mail.rs  mod.rs  shop.rs  stats.rs  user.rs
backend/src/utils/: jwt.rs  mod.rs  scheduler.rs
