[package]
name = "backend"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "macros", "chrono", "uuid"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
env_logger = "0.11.5"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10.4"
sea-orm = { version = "2.0.0-rc.32", default-features = false, features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
    "with-chrono",
    "with-json",
    "with-rust_decimal",
    "with-uuid",
] }
uuid = { version = "1.0", features = ["v4", "serde"] }
bcrypt = "0.14"
jsonwebtoken = "9.3.0"
utoipa-swagger-ui = { version = "9.0.0", features = ["rocket", "vendored"] }
utoipa = { version = "5.3.1", features = ["uuid"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_cors = "0.6.0"
